Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1urRIQRoh9-gWVmm9KTWjExME5kVcjBWv",
-      "authorship_tag": "ABX9TyNJydXNtmFWEkeHmX7Dp9+t",
+      "authorship_tag": "ABX9TyMNoyEtoHrDvrv8ZzxNZr8x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -831,7 +831,7 @@
       "source": [
         "%%capture\n",
         "class CFG:\n",
-        "    project_name = 'SETI_aug_check2'\n",
+        "    project_name = 'your project name'\n",
         "    pretrained_model_name = 'efficientnetv2_rw_s'\n",
         "    pretrained = True\n",
         "    prettained_path = '../input/timm_weight/efficientnet_b0_ra-3dd342df.pth'\n",
