Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1urRIQRoh9-gWVmm9KTWjExME5kVcjBWv",
-      "authorship_tag": "ABX9TyMNoyEtoHrDvrv8ZzxNZr8x",
+      "authorship_tag": "ABX9TyMAZY1ley/zRSw5NHWeUuDL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -897,6 +897,7 @@
         "from tqdm.notebook import tqdm\n",
         "import datetime\n",
         "import psutil\n",
+        "import gc\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
