Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1urRIQRoh9-gWVmm9KTWjExME5kVcjBWv",
-      "authorship_tag": "ABX9TyPjkYHifgZr2cVrk/1zCfNv",
+      "authorship_tag": "ABX9TyNtRyLmpf0GICAuajBlrbZO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,10 +87,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "d2d2rLHjzhyI"
+      },
+      "source": [
+        "# Move data if needed\n",
+        "\n",
+        "# %%capture\n",
+        "# !unzip \"/content/drive/MyDrive/kaggle/input/***/data.zip\" -d \"/content\"\n",
+        "# print(\"loading done\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ONHqlHq6TzWe"
       },
       "source": [
-        "%%capture\n",
         "class CFG:\n",
         "    project_name = 'your project name'\n",
         "    pretrained_model_name = 'efficientnetv2_rw_s'\n",
