--- a/template_Tez.ipynb
+++ b/template_Tez.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1XyIKDkaVtd4PqlQjbpB-FKMgZ3t0mVl3",
-      "authorship_tag": "ABX9TyPs4z/mXn+vqe/4TODBXW7f",
+      "authorship_tag": "ABX9TyMPbHaE3FjRPdfrZfXLCGA7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,7 +522,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/yseeker/pytorch_templates/blob/main/template_Tez.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/yseeker/pytorch-templates/blob/main/template_Tez.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -802,51 +802,14 @@
         "    \n",
         "    def __getitem__(self, item): \n",
         "        targets = self.targets[item]\n",
-        "        image1 = np.load(self.image_paths[item]).astype(np.float32)\n",
-        "        if image1.shape[0] == 6:\n",
-        "            image = np.vstack(image1[::2]).transpose((1, 0))\n",
-        "            image = ((image - np.mean(image, axis=1, keepdims=True)) / np.std(image, axis=1, keepdims=True))\n",
-        "            image = ((image - np.mean(image, axis=0, keepdims=True)) / np.std(image, axis=0, keepdims=True))\n",
-        "            image = A.Resize(p = 1, height = 512, width = 512)(image = image)['image']\n",
-        "            image = image.astype(np.float32)[np.newaxis, ]\n",
-        "        else:\n",
-        "            image = image1.astype(np.float32)[np.newaxis, ]\n",
-        "\n",
-        "        if self.transform:\n",
-        "            image = self.transform(image=image)[\"image\"]\n",
-        "\n",
-        "        return {\n",
-        "            \"image\": torch.tensor(image, dtype=torch.float),\n",
-        "            \"targets\": torch.tensor(targets, dtype=torch.float),\n",
-        "        }\n",
-        "\n",
-        "class ValidDataset():\n",
-        "    def __init__(self, image_paths, targets, transform = None): \n",
-        "        self.image_paths = image_paths\n",
-        "        self.targets = targets\n",
-        "        self.transform = None\n",
-        "\n",
-        "    def __len__(self):\n",
-        "        return len(self.image_paths)\n",
-        "    \n",
-        "    def __getitem__(self, item): \n",
-        "        targets = self.targets[item]\n",
-        "        image1 = np.load(self.image_paths[item]).astype(np.float32)\n",
-        "\n",
-        "        image = np.vstack(image1[::2]).transpose((1, 0))\n",
-        "        image = ((image - np.mean(image, axis=1, keepdims=True)) / np.std(image, axis=1, keepdims=True))\n",
-        "        image = ((image - np.mean(image, axis=0, keepdims=True)) / np.std(image, axis=0, keepdims=True))\n",
-        "        image = A.Resize(p = 1, height = 512, width = 512)(image = image)['image']\n",
+        "        image1 = np.load(self.image_paths[item])\n",
+        "        image = np.vstack(image).transpose((1, 0))\n",
         "        image = image.astype(np.float32)[np.newaxis, ]\n",
         "\n",
-        "        if self.transform:\n",
-        "            image = self.transform(image=image)[\"image\"]\n",
-        "\n",
         "        return {\n",
         "            \"image\": torch.tensor(image, dtype=torch.float),\n",
         "            \"targets\": torch.tensor(targets, dtype=torch.float),\n",
         "        }\n",
-        "\n",
         "\n",
         "class CustomNN(tez.Model):\n",
         "    def __init__(self):\n",
@@ -857,38 +820,18 @@
         "                               padding=3, \n",
         "                               bias=False)\n",
         "        \n",
-        "        if CFG.pretrained_model_name == 'vgg16':\n",
-        "            self.mynet = torchvision.models.vgg16(pretrained=CFG.pretrained)\n",
-        "            self.mynet.classifier[6] = torch.nn.Linear(\n",
-        "                self.mynet.classifier[6].in_features, \n",
-        "                CFG.out_dim\n",
-        "            )\n",
-        "        elif CFG.pretrained_model_name == 'vgg16_bn':\n",
-        "            self.mynet = torchvision.models.vgg16_bn(pretrained=True)\n",
-        "            self.mynet.classifier[6] = torch.nn.Linear(\n",
-        "                self.mynet.classifier[6].in_features, \n",
-        "                CFG.out_dim\n",
-        "            )\n",
-        "        else:\n",
-        "            self.mynet = timm.create_model(CFG.pretrained_model_name, \n",
-        "                                        pretrained = CFG.pretrained, \n",
-        "                                        in_chans=CFG.input_channels)\n",
-        "            if not CFG.pretrained: \n",
-        "                self.mynet.load_state_dict(torch.load(pretrained_path))\n",
-        "            if CFG.pretrained_model_name in timm_efficientnet_family: \n",
-        "                self.mynet.classifier = nn.Linear(self.mynet.classifier.in_features, \n",
-        "                                                CFG.out_dim)\n",
-        "            elif CFG.pretrained_model_name in timm_resnet_family:\n",
-        "                self.mynet.fc = nn.Linear(self.mynet.num_features, CFG.out_dim)\n",
-        "            elif CFG.pretrained_model_name in timm_vit_family | timm_swint_family:\n",
-        "                self.mynet.head = nn.Linear(self.mynet.head.in_features, CFG.out_dim)\n",
+        "        self.model = timm.create_model(CFG.pretrained_model_name, \n",
+        "                                       pretrained = CFG.pretrained, \n",
+        "                                       in_chans = CFG.input_channels)\n",
+        "        if not CFG.pretrained: self.model.load_state_dict(torch.load(CFG.pretrained_path))\n",
+        "        self.model.classifier = nn.Linear(self.model.classifier.in_features, CFG.out_dim)\n",
         "            \n",
         "        self.criterion =  nn.BCEWithLogitsLoss()\n",
         "\n",
         "\n",
         "    def forward(self, image, targets = None):\n",
         "        x = self.conv1(image)\n",
-        "        outputs = self.mynet(x)\n",
+        "        outputs = self.model(x)\n",
         "        \n",
         "        if targets is not None:\n",
         "            loss = self.criterion(outputs, targets.view(-1, 1))\n",
