--- a/template_Tez.ipynb
+++ b/template_Tez.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1XyIKDkaVtd4PqlQjbpB-FKMgZ3t0mVl3",
-      "authorship_tag": "ABX9TyMPbHaE3FjRPdfrZfXLCGA7",
+      "authorship_tag": "ABX9TyMjasJbpslkHyo00GtLg+x0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,13 +607,13 @@
         "\n",
         "class CFG:\n",
         "    project_name = 'project name'\n",
-        "    pretrained_model_name = 'vgg16_bn'\n",
+        "    pretrained_model_name = 'efficientnetv2_rw_s'\n",
         "    lr = 5e-4\n",
         "    batch_size= 16\n",
         "    wandb_note = f'bs{batch_size}_adamW_default_lr{lr}'\n",
         "    pretrained = True\n",
         "    prettained_path = '../input/timm_weight/efficientnet_v2s_ra2_288-a6477665.pth'\n",
-        "    input_channels = 3\n",
+        "    input_channels = 1\n",
         "    out_dim = 1\n",
         "    colab_or_kaggle = 'colab'\n",
         "    wandb_exp_name = f'{pretrained_model_name}_{colab_or_kaggle}_{wandb_note}'\n",
@@ -735,9 +735,9 @@
         "        )\n",
         "    ]\n",
         ")\n",
-        "df = pd.read_csv('../input/seti-breakthrough-listen/train_labels.csv')\n",
+        "df = pd.read_csv('../input/***/train_labels.csv')\n",
         "df['img_path'] = df['id'].apply(\n",
-        "    lambda x: f'../input/seti-breakthrough-listen/train/{x[0]}/{x}.npy'\n",
+        "    lambda x: f'../input/***/train/{x[0]}/{x}.npy'\n",
         ")\n",
         "\n",
         "\n",
@@ -814,12 +814,6 @@
         "class CustomNN(tez.Model):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(1, 3, \n",
-        "                               kernel_size=3, \n",
-        "                               stride=1, \n",
-        "                               padding=3, \n",
-        "                               bias=False)\n",
-        "        \n",
         "        self.model = timm.create_model(CFG.pretrained_model_name, \n",
         "                                       pretrained = CFG.pretrained, \n",
         "                                       in_chans = CFG.input_channels)\n",
@@ -830,8 +824,7 @@
         "\n",
         "\n",
         "    def forward(self, image, targets = None):\n",
-        "        x = self.conv1(image)\n",
-        "        outputs = self.model(x)\n",
+        "        outputs = self.model(image)\n",
         "        \n",
         "        if targets is not None:\n",
         "            loss = self.criterion(outputs, targets.view(-1, 1))\n",
