--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyNmAPEkCgBQ2kpDWlz1vCEC",
+      "authorship_tag": "ABX9TyOdGGkaGgbUsN+pIpw7bDg2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -292,7 +292,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
       "source": [
         "!pip install gwpy --quiet"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,6 @@
         "    colab_or_kaggle = 'colab'\n",
         "    wandb_exp_name = f'{pretrained_model_name}_{colab_or_kaggle}_{wandb_note}'\n",
         "    monitor = 'valid_roc_auc'\n",
-        "    batch_size= 16\n",
         "    epochs = 3\n",
         "    num_of_fold = 5\n",
         "    seed = 42\n",
@@ -388,7 +387,7 @@
         "\n",
         "# AdamW, VGG16, only0.6"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +398,7 @@
       "source": [
         "# !unzip \"/content/drive/MyDrive/kaggle/input/***/data.zip\" -d \"/content\""
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +416,7 @@
         "os.environ['KAGGLE_KEY'] = json_data['key']\n",
         "os.chdir(\"/content/drive/My Drive/kaggle/working\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -443,7 +442,7 @@
         "from PIL import Image\n",
         "import albumentations as A"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,20 +464,9 @@
         "import tez\n",
         "from tez.datasets import ImageDataset\n",
         "from tez.callbacks import EarlyStopping\n",
-        "import timm\n",
-        "\n",
-        "def set_seed(seed = 0):\n",
-        "    np.random.seed(seed)\n",
-        "    random_state = np.random.RandomState(seed)\n",
-        "    random.seed(seed)\n",
-        "    torch.manual_seed(seed)\n",
-        "    torch.cuda.manual_seed(seed)\n",
-        "    torch.backends.cudnn.deterministic = True\n",
-        "    torch.backends.cudnn.benchmark = False\n",
-        "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
-        "    return random_state"
+        "import timm"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -508,22 +496,12 @@
         "    lambda x: f'../input/***/train/{x[0]}/{x}.npy'\n",
         ")\n",
         "\n",
-        "X = df.img_path\n",
-        "Y = df.target\n",
+        "X = df.img_path.values\n",
+        "Y = df.target.values\n",
         "\n",
-        "skf = StratifiedKFold(n_splits = CFG.num_of_fold)\n",
-        "\n",
-        "df3 = pd.read_csv('../input/***/valid_labels.csv')\n",
-        "df3['img_path'] = df3['id'].apply(\n",
-        "    lambda x: f'../input/***/valid/{x[0]}/{x}.npy'\n",
-        ")\n",
-        "\n",
-        "X_valid = df3.img_path\n",
-        "Y_valid = df3.target\n",
-        "\n",
-        "test = np.load(X[1]).astype(np.float32)"
+        "skf = StratifiedKFold(n_splits = CFG.num_of_fold)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,6 +510,23 @@
         "id": "WSCUPDaxva3l"
       },
       "source": [
+        "def sigmoid(x):\n",
+        "  return 1 / (1 + math.exp(-x))\n",
+        "\n",
+        "# define vectorized sigmoid\n",
+        "sigmoid_v = np.vectorize(sigmoid)\n",
+        "\n",
+        "def set_seed(seed = 0):\n",
+        "    np.random.seed(seed)\n",
+        "    random_state = np.random.RandomState(seed)\n",
+        "    random.seed(seed)\n",
+        "    torch.manual_seed(seed)\n",
+        "    torch.cuda.manual_seed(seed)\n",
+        "    torch.backends.cudnn.deterministic = True\n",
+        "    torch.backends.cudnn.benchmark = False\n",
+        "    os.environ['PYTHONHASHSEED'] = str(seed)\n",
+        "    return random_state\n",
+        "\n",
         "def mixup_data(inputs, targets, alpha=1.0):\n",
         "    '''Returns mixed inputs, pairs of targets, and lambda'''\n",
         "    if alpha > 0:\n",
@@ -548,7 +543,7 @@
         "def mixup_criterion(criterion, outputs, targets_a, targets_b, lam):\n",
         "    return lam * criterion(outputs, targets_a) + (1 - lam) * criterion(outputs, targets_b)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -568,18 +563,8 @@
         "    \n",
         "    def __getitem__(self, item): \n",
         "        targets = self.targets[item]\n",
-        "        image1 = np.load(self.image_paths[item]).astype(np.float32)\n",
-        "        if image1.shape[0] == 6:\n",
-        "            image = np.vstack(image1[::2]).transpose((1, 0))\n",
-        "            image = ((image - np.mean(image, axis=1, keepdims=True)) / np.std(image, axis=1, keepdims=True))\n",
-        "            image = ((image - np.mean(image, axis=0, keepdims=True)) / np.std(image, axis=0, keepdims=True))\n",
-        "            image = A.Resize(p = 1, height = 512, width = 512)(image = image)['image']\n",
-        "            image = image.astype(np.float32)[np.newaxis, ]\n",
-        "        else:\n",
-        "            image = image1.astype(np.float32)[np.newaxis, ]\n",
-        "\n",
-        "        if self.transform:\n",
-        "            image = self.transform(image=image)[\"image\"]\n",
+        "        image = np.load(self.image_paths[item])\n",
+        "        image = image[np.newaxis, ]\n",
         "\n",
         "        return torch.tensor(image, dtype=torch.float), torch.tensor(targets, dtype=torch.float)\n",
         "\n",
@@ -587,48 +572,16 @@
         "class CustomNN(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
-        "        self.conv1 = nn.Conv2d(1, 3, \n",
-        "                               kernel_size=3, \n",
-        "                               stride=1, \n",
-        "                               padding=3, \n",
-        "                               bias=False)\n",
+        "        self.model = timm.create_model(CFG.pretrained_model_name, \n",
+        "                                       pretrained = CFG.pretrained, \n",
+        "                                       in_chans = CFG.input_channels)\n",
+        "        if not CFG.pretrained: self.model.load_state_dict(torch.load(CFG.pretrained_path))\n",
+        "        self.model.classifier = nn.Linear(self.model.classifier.in_features, CFG.out_dim)\n",
         "        \n",
-        "        if CFG.pretrained_model_name == 'vgg16':\n",
-        "            self.mynet = torchvision.models.vgg16(pretrained=CFG.pretrained)\n",
-        "            self.mynet.classifier[6] = torch.nn.Linear(\n",
-        "                self.mynet.classifier[6].in_features, \n",
-        "                CFG.out_dim\n",
-        "            )\n",
-        "        elif CFG.pretrained_model_name == 'vgg16_bn':\n",
-        "            self.mynet = torchvision.models.vgg16_bn(pretrained=True)\n",
-        "            self.mynet.classifier[6] = torch.nn.Linear(\n",
-        "                self.mynet.classifier[6].in_features, \n",
-        "                CFG.out_dim\n",
-        "            )\n",
-        "        else:\n",
-        "            self.mynet = timm.create_model(CFG.pretrained_model_name, \n",
-        "                                        pretrained = CFG.pretrained, \n",
-        "                                        in_chans=CFG.input_channels)\n",
-        "            if not CFG.pretrained: \n",
-        "                self.mynet.load_state_dict(torch.load(pretrained_path))\n",
-        "            if CFG.pretrained_model_name in timm_efficientnet_family: \n",
-        "                self.mynet.classifier = nn.Linear(self.mynet.classifier.in_features, \n",
-        "                                                CFG.out_dim)\n",
-        "            elif CFG.pretrained_model_name in timm_resnet_family:\n",
-        "                self.mynet.fc = nn.Linear(self.mynet.num_features, CFG.out_dim)\n",
-        "            elif CFG.pretrained_model_name in timm_vit_family | timm_swint_family:\n",
-        "                self.mynet.head = nn.Linear(self.mynet.head.in_features, CFG.out_dim)\n",
-        "            \n",
-        "        \n",
-        "\n",
-        "    def forward(self, image, targets = None):\n",
-        "        # image, targets_a, targets_b, lam = self.mixup_data(image, \n",
-        "        #                                               targets,\n",
-        "        #                                               alpha= CFG.mixup_alpha)\n",
-        "        x = self.conv1(image)\n",
-        "        outputs = self.mynet(x)\n",
-        "\n",
+        "    def forward(self, inputs):\n",
+        "        outputs = self.model(inputs)\n",
         "        return outputs\n",
+        "\n",
         "\n",
         "class Trainer(tez.Trainer):\n",
         "    def __init__(self, model):\n",
@@ -637,19 +590,21 @@
         "        self.criterion =  nn.BCEWithLogitsLoss()\n",
         "\n",
         "    def epoch_metrics(self, outputs, targets):\n",
+        "        outputs = sigmoid_v(outputs)\n",
         "        roc_auc = metrics.roc_auc_score(targets, outputs)\n",
         "        return roc_auc\n",
         "\n",
         "    def monitor_metrics(self, outputs, targets):\n",
-        "        outputs = outputs.cpu().detach().numpy()\n",
+        "        outputs = outputs.sigmoid().cpu().detach().numpy()\n",
         "        targets = targets.cpu().detach().numpy()\n",
         "        if len(np.unique(targets)) > 1: \n",
         "            roc_auc = metrics.roc_auc_score(targets, outputs)\n",
-        "        else: roc_auc = 1.0\n",
+        "        else: roc_auc = 0.5\n",
         "        return {\"roc_auc\": roc_auc}\n",
         "\n",
         "    def configure_optimizer(self):\n",
-        "        opt = torch.optim.AdamW(self.model.parameters(), lr=CFG.lr, weight_decay=0.01)\n",
+        "        opt = torch.optim.AdamW(self.parameters(), lr=CFG.lr, weight_decay=0.01)\n",
+        "        #opt = torch.optim.SGD(self.parameters(), lr=0.001, momentum=0.9)\n",
         "        return opt\n",
         "    \n",
         "    def configure_scheduler(self):\n",
@@ -658,7 +613,7 @@
         "        )\n",
         "        return sch"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,48 +638,47 @@
       },
       "source": [
         "models = []\n",
-        "skf = StratifiedKFold(n_splits = CFG.num_of_fold)\n",
+        "for fold_cnt, (train_index, test_index) in enumerate(skf.split(X, Y)):\n",
+        "    train_images, valid_images = X[train_index], X[test_index]\n",
+        "    train_targets, valid_targets = Y[train_index], Y[test_index]\n",
         "\n",
-        "train_images, valid_images = X, X_valid\n",
-        "train_targets, valid_targets = Y, Y_valid\n",
+        "    train_dataset = ClassificationDataset(\n",
+        "        image_paths=train_images, \n",
+        "        targets=train_targets, \n",
+        "        transform = train_aug\n",
+        "    )\n",
+        "    valid_dataset = ClassificationDataset(\n",
+        "        image_paths=valid_images, \n",
+        "        targets=valid_targets, \n",
+        "        transform = None\n",
+        "    )\n",
         "\n",
-        "train_dataset = ClassificationDataset(\n",
-        "    image_paths=train_images, \n",
-        "    targets=train_targets, \n",
-        "    transform = train_aug\n",
-        ")\n",
-        "valid_dataset = ClassificationDataset(\n",
-        "    image_paths=valid_images, \n",
-        "    targets=valid_targets, \n",
-        "    transform = None\n",
-        ")\n",
+        "    es = EarlyStopping(\n",
+        "        monitor=CFG.monitor, \n",
+        "        model_path=CFG.checkpoint_path+f'{CFG.pretrained_model_name}_{CFG.wandb_note}.cpt', \n",
+        "        patience= CFG.patience, \n",
+        "        mode=CFG.patience_mode,\n",
+        "        delta = CFG.delta\n",
+        "    )\n",
+        "    model = CustomNN()\n",
         "\n",
-        "es = EarlyStopping(\n",
-        "    monitor=CFG.monitor, \n",
-        "    model_path=CFG.checkpoint_path+f'{CFG.pretrained_model_name}_{CFG.wandb_note}.cpt', \n",
-        "    patience= CFG.patience, \n",
-        "    mode=CFG.patience_mode,\n",
-        "    delta = CFG.delta\n",
-        ")\n",
-        "model = CustomNN()\n",
+        "    trainer = Trainer(model = model)\n",
         "\n",
-        "trainer = Trainer(model = model)\n",
-        "\n",
-        "trainer.fit(\n",
-        "    cfg = CFG,\n",
-        "    train_dataset = train_dataset,\n",
-        "    valid_dataset = valid_dataset,\n",
-        "    valid_targets = valid_targets,\n",
-        "    train_bs=CFG.batch_size,\n",
-        "    valid_bs=CFG.batch_size,\n",
-        "    epochs=CFG.epochs,\n",
-        "    callbacks=[es],\n",
-        "    n_jobs = CFG.num_workers,\n",
-        "    fp16=CFG.fp16,\n",
-        "    benchmark = CFG.benchmark\n",
-        ")"
+        "    trainer.fit(\n",
+        "        cfg = CFG,\n",
+        "        train_dataset = train_dataset,\n",
+        "        valid_dataset = valid_dataset,\n",
+        "        valid_targets = valid_targets,\n",
+        "        train_bs=CFG.batch_size,\n",
+        "        valid_bs=CFG.batch_size,\n",
+        "        epochs=CFG.epochs,\n",
+        "        callbacks=[es],\n",
+        "        n_jobs = CFG.num_workers,\n",
+        "        fp16=CFG.fp16,\n",
+        "        benchmark = CFG.benchmark\n",
+        "    )"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -841,6 +795,61 @@
       },
       "source": [
         ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9eIF62cVHcQn"
+      },
+      "source": [
+        "!cp \"/content/drive/MyDrive/kaggle/input/***/sample_submission.csv\" \"/content\"\n",
+        "!unzip \"/content/drive/MyDrive/kaggle/input/***/data.zip\" -d \"/content/test\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PguJqnuRHm9T"
+      },
+      "source": [
+        "submission = pd.read_csv('/content/sample_submission.csv')\n",
+        "submission['img_path'] = submission['id'].apply(\n",
+        "    lambda x: f'/content/test/{x}.npy'\n",
+        ")\n",
+        "test_dataset = ClassificationDataset(\n",
+        "    image_paths=submission.img_path.values, \n",
+        "    targets=submission.target.values, \n",
+        "    transform = train_aug\n",
+        ")\n",
+        "\n",
+        "final_preds = None\n",
+        "num_of_ave = 5\n",
+        "outs = []\n",
+        "for model in models:\n",
+        "    for j in range(num_of_ave):\n",
+        "        preds = model.predict(test_dataset, batch_size=128, n_jobs=-1)\n",
+        "        temp_preds = None\n",
+        "        for p in preds:\n",
+        "            if temp_preds is None:\n",
+        "                temp_preds = p\n",
+        "            else:\n",
+        "                temp_preds = np.vstack((temp_preds, p))\n",
+        "        if final_preds is None:\n",
+        "            final_preds = temp_preds\n",
+        "        else:\n",
+        "            final_preds += temp_preds\n",
+        "    final_preds = final_preds/num_of_ave\n",
+        "    out = sigmoid_v(final_preds)\n",
+        "    outs.append(out)\n",
+        "pred = np.mean(np.array(outs), axis=0)\n",
+        "submission.target = pred\n",
+        "submission.drop(['img_path'], axis=1, inplace=True)\n",
+        "submission.to_csv('submission.csv', index=False)"
       ],
       "execution_count": null,
       "outputs": []
