Colaboratory を使用して作成しました

--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyOdGGkaGgbUsN+pIpw7bDg2",
+      "authorship_tag": "ABX9TyN0B9kMrQdnSxzg78mFeqGv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -429,6 +429,7 @@
         "import sys\n",
         "import random\n",
         "from tqdm import tqdm\n",
+        "import math\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
