Colaboratory を使用して作成しました

--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyN0B9kMrQdnSxzg78mFeqGv",
+      "authorship_tag": "ABX9TyPvGZRm/U+Z2G3VpQMSCd2X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -397,24 +397,6 @@
       },
       "source": [
         "# !unzip \"/content/drive/MyDrive/kaggle/input/***/data.zip\" -d \"/content\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qAD1kL_xEzUj"
-      },
-      "source": [
-        "# for kaggle\n",
-        "import os\n",
-        "import json\n",
-        "f = open(\"/content/drive/My Drive/kaggle/kaggle.json\", 'r')\n",
-        "json_data = json.load(f) #JSON形式で読み込む\n",
-        "os.environ['KAGGLE_USERNAME'] = json_data['username']\n",
-        "os.environ['KAGGLE_KEY'] = json_data['key']\n",
-        "os.chdir(\"/content/drive/My Drive/kaggle/working\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -851,6 +833,26 @@
         "submission.target = pred\n",
         "submission.drop(['img_path'], axis=1, inplace=True)\n",
         "submission.to_csv('submission.csv', index=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qK2myOhCO0rO"
+      },
+      "source": [
+        "# for kaggle\n",
+        "import os\n",
+        "import json\n",
+        "f = open(\"/content/drive/My Drive/kaggle/kaggle.json\", 'r')\n",
+        "json_data = json.load(f) #JSON形式で読み込む\n",
+        "os.environ['KAGGLE_USERNAME'] = json_data['username']\n",
+        "os.environ['KAGGLE_KEY'] = json_data['key']\n",
+        "os.chdir(\"/content/drive/My Drive/kaggle/working\")\n",
+        "\n",
+        "!kaggle competitions submit -c titanic -f submission.csv -m 'submit!!'"
       ],
       "execution_count": null,
       "outputs": []
