Colaboratory を使用して作成しました

--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyPvGZRm/U+Z2G3VpQMSCd2X",
+      "authorship_tag": "ABX9TyN+48NdjtzLxGnN95CeKIc8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -435,6 +435,7 @@
       },
       "source": [
         "#!pip install timm\n",
+        "os.chdir(\"/content/drive/My Drive/kaggle/working\")\n",
         "tez_path = '../input/tez-lib'\n",
         "#efnet_path = '../input/efficientnet-pytorch/EfficientNet-PyTorch/EfficientNet-PyTorch-master'\n",
         "timm_path = '../input/pytorch-image-models-master'\n",
