Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyPI/piV9NV8MQ6ujNjX8h8N",
+      "authorship_tag": "ABX9TyOudNzNIpiXIkpj0d5lkY8k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -679,7 +679,6 @@
         "import cv2\n",
         "from PIL import Image\n",
         "import albumentations as A\n",
-        "import timm\n",
         "\n",
         "import wandb\n",
         "import warnings\n",
@@ -692,7 +691,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TnLcKek4QVBG"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 236
+        },
+        "id": "TnLcKek4QVBG",
+        "outputId": "f5159c21-2831-4057-9132-41412cb2448e"
       },
       "source": [
         "#If internet is off\n",
@@ -702,10 +706,23 @@
         "timm_path = '../input/pytorch-image-models-master'\n",
         "sys.path.append(tez_path)\n",
         "sys.path.append(efnet_path)\n",
-        "sys.path.append(timm_path)"
+        "sys.path.append(timm_path)\n",
+        "import timm"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-6a221dbfca16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#If internet is off\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/drive/My Drive/kaggle/working\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtez_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../input/tez-lib'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mefnet_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../input/efficientnet-pytorch/EfficientNet-PyTorch/EfficientNet-PyTorch-master'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtimm_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'../input/pytorch-image-models-master'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
