Colaboratory を使用して作成しました

--- a/template_Tez.ipynb
+++ b/template_Tez.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1esdPQUe7vCl97dVfU9Ns16iDz_vUHTzt",
-      "authorship_tag": "ABX9TyPkK1VKn+l8q3G3wVq1sJvR",
+      "authorship_tag": "ABX9TyOXYgTg+6FCirU9Y14k2TMa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,8 +272,10 @@
         "id": "WSCUPDaxva3l"
       },
       "source": [
-        "def sigmoid(x):\n",
-        "  return 1 / (1 + math.exp(-x))\n",
+        "def sigmoid(gamma):\n",
+        "    if gamma < 0:\n",
+        "        return 1 - 1 / (1 + math.exp(gamma))\n",
+        "    return 1 / (1 + math.exp(-gamma))\n",
         "\n",
         "# define vectorized sigmoid\n",
         "sigmoid_v = np.vectorize(sigmoid)\n",
