Colaboratory を使用して作成しました

--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyN+48NdjtzLxGnN95CeKIc8",
+      "authorship_tag": "ABX9TyPqV5BLsVzy9F81Okr+d2Mx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -494,8 +494,10 @@
         "id": "WSCUPDaxva3l"
       },
       "source": [
-        "def sigmoid(x):\n",
-        "  return 1 / (1 + math.exp(-x))\n",
+        "def sigmoid(gamma):\n",
+        "    if gamma < 0:\n",
+        "        return 1 - 1 / (1 + math.exp(gamma))\n",
+        "    return 1 / (1 + math.exp(-gamma))\n",
         "\n",
         "# define vectorized sigmoid\n",
         "sigmoid_v = np.vectorize(sigmoid)\n",
