Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyOudNzNIpiXIkpj0d5lkY8k",
+      "authorship_tag": "ABX9TyMF8onuyoZeRLetzCbK2Av6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -709,7 +709,7 @@
         "sys.path.append(timm_path)\n",
         "import timm"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -731,8 +731,10 @@
       },
       "source": [
         "# Utils\n",
-        "def sigmoid(x):\n",
-        "  return 1 / (1 + math.exp(-x))\n",
+        "def sigmoid(gamma):\n",
+        "    if gamma < 0:\n",
+        "        return 1 - 1 / (1 + math.exp(gamma))\n",
+        "    return 1 / (1 + math.exp(-gamma))\n",
         "\n",
         "# define vectorized sigmoid\n",
         "sigmoid_v = np.vectorize(sigmoid)\n",
