Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyMF8onuyoZeRLetzCbK2Av6",
+      "authorship_tag": "ABX9TyOuxmDDVpX7GhROapx1toRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1083,7 +1083,7 @@
         "        return preds_arr\n",
         "\n",
         "    def save(self, model_path):\n",
-        "        model_state_dict = self.state_dict()\n",
+        "        model_state_dict = self.model.state_dict()\n",
         "        if self.optimizer is not None:\n",
         "            opt_state_dict = self.optimizer.state_dict()\n",
         "        else:\n",
@@ -1111,7 +1111,7 @@
         "        if next(self.model.parameters()).device != self.device:\n",
         "            self.to(self.device)\n",
         "        model_dict = torch.load(model_path, map_location=torch.device(device))\n",
-        "        self.load_state_dict(model_dict[\"state_dict\"])\n",
+        "        self.model.load_state_dict(model_dict[\"state_dict\"])\n",
         "\n",
         "    def fit(\n",
         "        self,\n",
