Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyOuxmDDVpX7GhROapx1toRK",
+      "authorship_tag": "ABX9TyPy5zMHE6wseJz3ub5cU/c1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -870,6 +870,7 @@
         "        outputs = self.model(inputs)\n",
         "        return outputs\n",
         "\n",
+        "\n",
         "class Trainer():\n",
         "    def __init__(\n",
         "        self,\n",
@@ -900,6 +901,7 @@
         "        torch.backends.cudnn.benchmark = benchmark\n",
         "        self.fp16 = fp16\n",
         "        self.scaler = torch.cuda.amp.GradScaler() \n",
+        "        self.current_epoch = 0\n",
         "        \n",
         "        if num_workers == -1: num_workers = psutil.cpu_count()\n",
         "        self.multiple_GPU = multiple_GPU\n",
@@ -990,7 +992,7 @@
         "                self.scaler.step(self.optimizer)\n",
         "                self.scaler.update()\n",
         "            else:\n",
-        "                outputs = self(inputs)\n",
+        "                outputs = self.model(inputs)\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
         "                loss = self.criterion(outputs, targets.view(-1, 1))\n",
         "                loss.backward()\n",
@@ -1009,7 +1011,7 @@
         "                metrics = self.monitor_metrics(outputs, targets)\n",
         "            return outputs, loss, metrics\n",
         "        else:\n",
-        "            outputs = self(inputs)\n",
+        "            outputs = self.model(inputs)\n",
         "            return outputs, None, None\n",
         "\n",
         "    def predict_one_step(self, inputs):\n",
@@ -1073,9 +1075,9 @@
         "            pin_memory = True\n",
         "        )\n",
         "        preds_list = []\n",
-        "        tk0 = tqdm(data_loader, total=len(self.test_loader), position = 0, leave = True)\n",
+        "        tk0 = tqdm(self.test_loader, total=len(self.test_loader), position = 0, leave = True)\n",
         "        for b_idx, (inputs, targets) in enumerate(tk0):\n",
-        "            preds_one_batch = self.predict_one_step(inputs, targets)\n",
+        "            preds_one_batch = self.predict_one_step(inputs)\n",
         "            preds_list.append(preds_one_batch.cpu().detach().numpy())\n",
         "            tk0.set_postfix(stage=\"inference\")\n",
         "        tk0.close()\n",
@@ -1109,8 +1111,8 @@
         "    def load(self, model_path):\n",
         "        self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "        if next(self.model.parameters()).device != self.device:\n",
-        "            self.to(self.device)\n",
-        "        model_dict = torch.load(model_path, map_location=torch.device(device))\n",
+        "            self.model.to(self.device)\n",
+        "        model_dict = torch.load(model_path, map_location=torch.device(self.device))\n",
         "        self.model.load_state_dict(model_dict[\"state_dict\"])\n",
         "\n",
         "    def fit(\n",
@@ -1132,6 +1134,7 @@
         "        early_stopping_counter = 0\n",
         "\n",
         "        for epoch in range(epochs):\n",
+        "            self.current_epoch = epoch\n",
         "            train_loss = self.train_one_epoch(self.train_loader)\n",
         "            if valid_dataset:\n",
         "                valid_metrics, valid_loss = self.validate_one_epoch(self.valid_loader)\n",
@@ -1144,7 +1147,7 @@
         "                    else:\n",
         "                        print(f\"Validation score improved ({current_best_valid_metrics} --> {valid_metrics}). Saving the check point!\")\n",
         "                        current_best_validmetrics= valid_metrics\n",
-        "                        self.save(checkpoint_save_path / f\"{cfg.pretrained_model_name}_epoch{epoch}.cpt\" )\n",
+        "                        self.save(checkpoint_save_path + f\"{cfg.pretrained_model_name}_epoch{epoch}.cpt\" )\n",
         "                else:\n",
         "                    if valid_metrics > current_best_valid_metrics - delta:\n",
         "                        early_stopping_counter += 1\n",
@@ -1153,7 +1156,7 @@
         "                    else:\n",
         "                        print(f\"Validation score improved ({current_best_valid_metrics} --> {valid_metrics}). Saving the check point!\")\n",
         "                        current_best_valid_metrics = valid_metrics\n",
-        "                        self.save(checkpoint_save_path / f\"{cfg.pretrained_model_name}_epoch{epoch}.cpt\" )\n",
+        "                        self.save(checkpoint_save_path + f\"{cfg.pretrained_model_name}_epoch{epoch}.cpt\" )\n",
         "                        \n",
         "            #writer.add_scalar(\"Loss/train\", 1.0, epoch)\n",
         "            print(f'epoch: {epoch}, validate_epoch_metrics : {valid_metrics}')\n",
