Colaboratory を使用して作成しました

--- a/template_Tez.ipynb
+++ b/template_Tez.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1esdPQUe7vCl97dVfU9Ns16iDz_vUHTzt",
-      "authorship_tag": "ABX9TyOXYgTg+6FCirU9Y14k2TMa",
+      "authorship_tag": "ABX9TyOsWi28ymtIIUbZu/mEJss0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -357,15 +357,15 @@
         "        return outputs, None, None\n",
         "\n",
         "    def epoch_metrics(self, outputs, targets):\n",
-        "        outputs = sigmoid_v(outputs)\n",
-        "        roc_auc = metrics.roc_auc_score(targets, outputs)\n",
+        "        preds = sigmoid_v(outputs)\n",
+        "        roc_auc = metrics.roc_auc_score(targets, preds)\n",
         "        return roc_auc\n",
         "\n",
         "    def monitor_metrics(self, outputs, targets):\n",
-        "        outputs = outputs.sigmoid().cpu().detach().numpy()\n",
+        "        preds = outputs.sigmoid().cpu().detach().numpy()\n",
         "        targets = targets.cpu().detach().numpy()\n",
         "        if len(np.unique(targets)) > 1: \n",
-        "            roc_auc = metrics.roc_auc_score(targets, outputs)\n",
+        "            roc_auc = metrics.roc_auc_score(targets, preds)\n",
         "        else: roc_auc = 0.5\n",
         "        return {\"roc_auc\": roc_auc}\n",
         "\n",
