Colaboratory を使用して作成しました

--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyPqV5BLsVzy9F81Okr+d2Mx",
+      "authorship_tag": "ABX9TyPNNO8Sfj4uTg99b7Drndor",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,15 +576,15 @@
         "        self.criterion =  nn.BCEWithLogitsLoss()\n",
         "\n",
         "    def epoch_metrics(self, outputs, targets):\n",
-        "        outputs = sigmoid_v(outputs)\n",
-        "        roc_auc = metrics.roc_auc_score(targets, outputs)\n",
+        "        preds = sigmoid_v(outputs)\n",
+        "        roc_auc = metrics.roc_auc_score(targets, preds)\n",
         "        return roc_auc\n",
         "\n",
         "    def monitor_metrics(self, outputs, targets):\n",
-        "        outputs = outputs.sigmoid().cpu().detach().numpy()\n",
+        "        preds = outputs.sigmoid().cpu().detach().numpy()\n",
         "        targets = targets.cpu().detach().numpy()\n",
         "        if len(np.unique(targets)) > 1: \n",
-        "            roc_auc = metrics.roc_auc_score(targets, outputs)\n",
+        "            roc_auc = metrics.roc_auc_score(targets, preds)\n",
         "        else: roc_auc = 0.5\n",
         "        return {\"roc_auc\": roc_auc}\n",
         "\n",
