Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyPy5zMHE6wseJz3ub5cU/c1",
+      "authorship_tag": "ABX9TyNH6RtH029ZlIZm78nEhBa0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -959,14 +959,14 @@
         "        return None\n",
         "\n",
         "    def epoch_metrics(self, outputs, targets):\n",
-        "        outputs = sigmoid_v(outputs)\n",
-        "        return metrics.roc_auc_score(targets, outputs)\n",
+        "        preds = sigmoid_v(outputs)\n",
+        "        return metrics.roc_auc_score(targets, preds)\n",
         "\n",
         "    def monitor_metrics(self, outputs, targets):\n",
-        "        outputs = outputs.sigmoid().cpu().detach().numpy()\n",
+        "        preds = outputs.sigmoid().cpu().detach().numpy()\n",
         "        targets = targets.cpu().detach().numpy()\n",
         "        if len(np.unique(targets)) > 1: \n",
-        "            roc_auc = metrics.roc_auc_score(targets, outputs)\n",
+        "            roc_auc = metrics.roc_auc_score(targets, preds)\n",
         "        else: roc_auc = 0.5\n",
         "        return roc_auc\n",
         "\n",
@@ -1023,7 +1023,7 @@
         "        running_loss, running_metrics = AverageMeter(), AverageMeter()\n",
         "        tk0 = tqdm(data_loader, total=len(data_loader), position = 0, leave = True)\n",
         "        for b_idx, (inputs, targets) in enumerate(tk0):\n",
-        "            preds_one_batch, loss, metrics = self.train_one_step(inputs, targets)\n",
+        "            _, loss, metrics = self.train_one_step(inputs, targets)\n",
         "            running_loss.update(loss.item(), data_loader.batch_size)\n",
         "            running_metrics.update(metrics, data_loader.batch_size)\n",
         "            current_lr = self.optimizer.param_groups[0]['lr'] \n",
@@ -1041,11 +1041,11 @@
         "    def validate_one_epoch(self, data_loader):\n",
         "        self.model.eval()\n",
         "        running_loss, running_metrics = AverageMeter(), AverageMeter()\n",
-        "        preds_list = []\n",
+        "        outputs_list = []\n",
         "        tk0 = tqdm(data_loader, total=len(data_loader), position = 0, leave = True)\n",
         "        for b_idx, (inputs, targets) in enumerate(tk0):\n",
-        "            preds_one_batch, loss, metrics = self.validate_one_step(inputs, targets)\n",
-        "            preds_list.append(preds_one_batch.cpu().detach().numpy())\n",
+        "            outputs_one_batch, loss, metrics = self.validate_one_step(inputs, targets)\n",
+        "            outputs_list.append(outputs_one_batch.cpu().detach().numpy())\n",
         "            running_loss.update(loss.item(), data_loader.batch_size)\n",
         "            running_metrics.update(metrics, data_loader.batch_size)\n",
         "            tk0.set_postfix(valid_loss = running_loss.avg, validate_step_metrics = running_metrics.avg, stage=\"validation\")\n",
@@ -1054,8 +1054,8 @@
         "                \"valid/metric_step\" : running_metrics.avg,\n",
         "                \"valid/loss\": running_loss.avg, \n",
         "                })\n",
-        "        preds_arr = np.concatenate(preds_list)\n",
-        "        valid_metric_val = self.epoch_metrics(preds_arr, self.valid_targets)\n",
+        "        outputs_arr = np.concatenate(outputs_list)\n",
+        "        valid_metric_val = self.epoch_metrics(outputs_arr, self.valid_targets)\n",
         "        tk0.close()\n",
         "        return valid_metric_val, running_loss.avg\n",
         "\n",
@@ -1074,15 +1074,15 @@
         "            drop_last = False,\n",
         "            pin_memory = True\n",
         "        )\n",
-        "        preds_list = []\n",
+        "        outputs_list = []\n",
         "        tk0 = tqdm(self.test_loader, total=len(self.test_loader), position = 0, leave = True)\n",
         "        for b_idx, (inputs, targets) in enumerate(tk0):\n",
-        "            preds_one_batch = self.predict_one_step(inputs)\n",
-        "            preds_list.append(preds_one_batch.cpu().detach().numpy())\n",
+        "            outputs_one_batch = self.predict_one_step(inputs)\n",
+        "            outputs_list.append(outputs_one_batch.cpu().detach().numpy())\n",
         "            tk0.set_postfix(stage=\"inference\")\n",
         "        tk0.close()\n",
-        "        preds_arr = np.concatenate(preds_list)\n",
-        "        return preds_arr\n",
+        "        outputs_arr = np.concatenate(outputs_list)\n",
+        "        return outputs_arr\n",
         "\n",
         "    def save(self, model_path):\n",
         "        model_state_dict = self.model.state_dict()\n",
