Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyNH6RtH029ZlIZm78nEhBa0",
+      "authorship_tag": "ABX9TyMDeXgMrw5pAKqZzNZuoN6B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -981,11 +981,11 @@
         "            if self.fp16:\n",
         "                with torch.cuda.amp.autocast(self.fp16):\n",
         "                    outputs = self.model(inputs)\n",
-        "                    #loss = self.criterion(outputs, targets.view(-1, 1))\n",
+        "                    #loss = self.criterion(outputs.flatten(), targets)\n",
         "                    loss = mixup_criterion(self.criterion,\n",
-        "                                                outputs, \n",
-        "                                                targets_a.view(-1, 1),\n",
-        "                                                targets_b.view(-1, 1), \n",
+        "                                                outputs.flatten(), \n",
+        "                                                targets_a,\n",
+        "                                                targets_b, \n",
         "                                                lam)\n",
         "                    metrics = self.monitor_metrics(outputs, targets)\n",
         "                self.scaler.scale(loss).backward()\n",
@@ -994,7 +994,7 @@
         "            else:\n",
         "                outputs = self.model(inputs)\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
-        "                loss = self.criterion(outputs, targets.view(-1, 1))\n",
+        "                loss = self.criterion(outputs.flatten(), targets)\n",
         "                loss.backward()\n",
         "                self.optimizer.step()\n",
         "            if self.scheduler_after_step:\n",
@@ -1007,7 +1007,7 @@
         "            targets = targets.to(self.device, non_blocking=True)\n",
         "            with torch.no_grad():\n",
         "                outputs = self.model(inputs)\n",
-        "                loss = self.criterion(outputs, targets.view(-1, 1))\n",
+        "                loss = self.criterion(outputs.flatten(), targets)\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
         "            return outputs, loss, metrics\n",
         "        else:\n",
