Colaboratory を使用して作成しました

--- a/template_Tez.ipynb
+++ b/template_Tez.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1esdPQUe7vCl97dVfU9Ns16iDz_vUHTzt",
-      "authorship_tag": "ABX9TyOsWi28ymtIIUbZu/mEJss0",
+      "authorship_tag": "ABX9TyMmNilBQou5y18bs6ridBBf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,7 +351,7 @@
         "        outputs = self.model(image)\n",
         "        \n",
         "        if targets is not None:\n",
-        "            loss = self.criterion(outputs, targets.view(-1, 1))\n",
+        "            loss = self.criterion(outputs.flatten(), targets)\n",
         "            metrics = self.monitor_metrics(outputs, targets)\n",
         "            return outputs, loss, metrics\n",
         "        return outputs, None, None\n",
