Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyMDeXgMrw5pAKqZzNZuoN6B",
+      "authorship_tag": "ABX9TyPULzaXY1EhFEhiU8VY4ctT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -981,6 +981,7 @@
         "            if self.fp16:\n",
         "                with torch.cuda.amp.autocast(self.fp16):\n",
         "                    outputs = self.model(inputs)\n",
+        "                    outputs = outputs.flatten()\n",
         "                    #loss = self.criterion(outputs.flatten(), targets)\n",
         "                    loss = mixup_criterion(self.criterion,\n",
         "                                                outputs.flatten(), \n",
@@ -993,6 +994,7 @@
         "                self.scaler.update()\n",
         "            else:\n",
         "                outputs = self.model(inputs)\n",
+        "                outputs = outputs.flatten()\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
         "                loss = self.criterion(outputs.flatten(), targets)\n",
         "                loss.backward()\n",
@@ -1007,11 +1009,13 @@
         "            targets = targets.to(self.device, non_blocking=True)\n",
         "            with torch.no_grad():\n",
         "                outputs = self.model(inputs)\n",
+        "                outputs = outputs.flatten()\n",
         "                loss = self.criterion(outputs.flatten(), targets)\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
         "            return outputs, loss, metrics\n",
         "        else:\n",
         "            outputs = self.model(inputs)\n",
+        "            outputs = outputs.flatten()\n",
         "            return outputs, None, None\n",
         "\n",
         "    def predict_one_step(self, inputs):\n",
@@ -1146,7 +1150,7 @@
         "                        if early_stopping_counter >= patience: break\n",
         "                    else:\n",
         "                        print(f\"Validation score improved ({current_best_valid_metrics} --> {valid_metrics}). Saving the check point!\")\n",
-        "                        current_best_validmetrics= valid_metrics\n",
+        "                        current_best_valid_metrics = valid_metrics\n",
         "                        self.save(checkpoint_save_path + f\"{cfg.pretrained_model_name}_epoch{epoch}.cpt\" )\n",
         "                else:\n",
         "                    if valid_metrics > current_best_valid_metrics - delta:\n",
