Colaboratory を使用して作成しました

--- a/template_Tez.ipynb
+++ b/template_Tez.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1esdPQUe7vCl97dVfU9Ns16iDz_vUHTzt",
-      "authorship_tag": "ABX9TyMmNilBQou5y18bs6ridBBf",
+      "authorship_tag": "ABX9TyNJtWt0x8noy9tCx7bWcAmp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -349,9 +349,9 @@
         "\n",
         "    def forward(self, image, targets = None):\n",
         "        outputs = self.model(image)\n",
-        "        \n",
+        "        outputs = outputs.flatten()\n",
         "        if targets is not None:\n",
-        "            loss = self.criterion(outputs.flatten(), targets)\n",
+        "            loss = self.criterion(outputs, targets)\n",
         "            metrics = self.monitor_metrics(outputs, targets)\n",
         "            return outputs, loss, metrics\n",
         "        return outputs, None, None\n",
